# serverplusplus

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  run.bat  run.sh
.github/workflows/: build.yml
src/: Main.cpp
src/engines/event/: Event.h  EventBus.cpp  EventBus.h  EventEngine.cpp  EventEngine.h  EventHandler.cpp  EventHandler.h
src/engines/logging/: Logger.cpp  Logger.h
src/utils/: ArgumentHandler.cpp  ArgumentHandler.h  IdGen.h
